Prototype with the functionalities.

--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,13 @@
 #app-title {
   color: #1bb193;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
