--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
 
 #app-title {
   color: #1bb193;
+  margin-bottom: 8px;
 }
 
 input::-webkit-outer-spin-button,
@@ -28,4 +29,31 @@ input::-webkit-inner-spin-button {
 
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+.MuiToggleButton-root.Mui-selected {
+  background-color: #1bb193;
+  color: #fff;
+}
+
+.MuiTab-textColorInherit.Mui-selected {
+  background-color: #1bb193;
+  color: #fff;
+}
+
+.MuiTab-textColorInherit {
+  background-color: #f0f0f0;
+}
+
+.MuiTypography-h6 {
+  line-height: 1.2;
+}
+
+.MuiInputBase-input {
+  background-color: #fff;
+  color: #595959;
+}
+
+.MuiButton-outlinedPrimary, .MuiButton-outlinedPrimary:hover {
+  border:2px solid #1bb193;
 }
